# totk-vscode

./: .gitignore  .gitmodules  .vscodeignore  CHANGELOG.md  README.md  byml_editor_format.py  debug_webview.html  esbuild.js  language-configuration.json  package-lock.json  package.json  pyproject.toml  replace.js  requirements.txt  scratch.py  scratch_bntx.py  scratch_check.py  scratch_check2.py  scratch_dds.py  scratch_pitch.py  todo.md  totk_bridge.py
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  dependabot.yml  pull_request_template.md
config/: aamp-extensions.json  coreFsExtensions.json
docs/: canonicalpaths.md  commands.md  gamebananadesc.md  settings.md  tkproj_options.md  verboselogging.md
icons/: TKVSC Icons.ai  TKVSC_FileIcons.ai  TKVSC_Logo.ai  totk-icon-theme.json
python/: aamp_io.py  aidef.txt  ainb_bridge.py  ainb_rpc.py  archive_resolve.py  asb_io.py  bntx_editor.py  bntx_reader.py  bntx_renderer.py  byml_editor_format.py  byml_yaml_utils.py  canonical_path_index.py  gen_msbt_tags.py  msbt_editor_format.py  msbt_tag_formatter.py  msbt_tags.py  romfs_index.py  tag_product_format.py  test_byml.py  totk_bridge.py  txtg_editor.py  txtg_reader.py  xlink_io.py  zstd_totk.py
research/: ainb_format_analysis.md  totk_node_definitions_analysis.md  vscode_node_editor_spec.md
scripts/: init-dev-env.ps1  init-dev-env.sh  setup-and-build.ps1  setup-and-build.sh  setup.ps1  setup.sh
src/: aampExtensions.ts  addToProject.ts  ainbEditor.ts  archiveFsCommands.ts  archiveTree.ts  archives.ts  bridge.ts  canonicalPathIndex.ts  dumpTree.ts  (+18 more)
(+47 files in other folders)
