[project]
name = "totk-vscode-python"
version = "0.0.1b1"
description = "Python scripts for TOTK VSCode extension"
requires-python = "~=3.12"
dependencies = [
    "oead>=1.2.9.post4",
    "zstandard>=0.22.0",
    "mmh3>=4.0.0",
    "Pillow>=10.0.0",
    "texture2ddecoder>=1.0.4",
    "PyYAML>=6.0"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [
    "vendor",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long, handled by formatter
    "E402",  # Module level import not at top of file
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
